==> neon-smart-studio/W-Link_NeonRTOS_Platform/src/W-Link/Driver/I2C/Device/Nuvoton/I2C_Master_NUC4x2.c <==
#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#include <stdint.h>
#include <stdbool.h>
#include "soc.h"
#include "NeonRTOS.h"
#include "I2C/I2C_Master.h"
#include "GPIO/Device/Nuvoton/GPIO_Nuvoton.h"
#include "I2C/Pin/Nuvoton/I2C_Pin_Nuvoton.h"
#include "I2C_Master_Nuvoton.h"

void I2C2_IRQHandler(void) { I2C_IRQ_Process(hwI2C_Index_2); }

static void I2C_Enable_Clock(hwI2C_Index index)
{
    switch(index)
    {
#if defined(I2C0_BASE)
        case hwI2C_Index_0:
            CLK_EnableModuleClock(I2C0_MODULE);
            break;
#endif
#if defined(I2C1_BASE)
        case hwI2C_Index_1:
            CLK_EnableModuleClock(I2C1_MODULE);
            break;
#endif
#if defined(I2C2_BASE)
        case hwI2C_Index_2:
            CLK_EnableModuleClock(I2C2_MODULE);
            break;
#endif
#if defined(I2C3_BASE)
        case hwI2C_Index_3:
            CLK_EnableModuleClock(I2C3_MODULE);
            break;
#endif
#if defined(I2C4_BASE)
        case hwI2C_Index_4:
            CLK_EnableModuleClock(I2C4_MODULE);
            break;
#endif
    }

    return;
}

static void I2C_Disable_Clock(hwI2C_Index index)
{
    switch(index)
    {
#if defined(I2C0_BASE)
        case hwI2C_Index_0:
            CLK_DisableModuleClock(I2C0_MODULE);
            break;
#endif
#if defined(I2C1_BASE)
        case hwI2C_Index_1:
            CLK_DisableModuleClock(I2C1_MODULE);
            break;
#endif
#if defined(I2C2_BASE)
        case hwI2C_Index_2:
            CLK_DisableModuleClock(I2C2_MODULE);
            break;
#endif
#if defined(I2C3_BASE)
        case hwI2C_Index_3:
            CLK_DisableModuleClock(I2C3_MODULE);
            break;
#endif
#if defined(I2C4_BASE)
        case hwI2C_Index_4:
            CLK_DisableModuleClock(I2C4_MODULE);
            break;
#endif

        default:
            break;
    }
}

hwI2C_OpResult I2C_Instance_Init(hwI2C_Index index, hwI2C_Speed_Mode speed_mode)
{
    if(index >= hwI2C_Index_MAX)
        return hwI2C_InvalidParameter;

    if(I2C_Master_Init_Status[index])
        return hwI2C_OK;

    if(speed_mode >= hwI2C_Speed_Mode_MAX)
        return hwI2C_InvalidParameter;

    I2C_T *i2c = I2C_Map_Soc_Base(index);

    if(i2c == NULL)
        return hwI2C_InvalidParameter;

    memset(&i2c_xfer[index], 0, sizeof(i2c_xfer[index]));
    i2c_xfer[index].state = NUC4x2_I2C_IDLE;

    I2C_Enable_Clock(index);

    switch(speed_mode)
    {
        case hwI2C_Standard_Mode:
            I2C_Open(i2c, I2C_MASTER_STANDARD_MODE_CLK_FREQUENCY);
            break;

        case hwI2C_Fast_Mode:
            I2C_Open(i2c, I2C_MASTER_FAST_MODE_CLK_FREQUENCY);
            break;

        case hwI2C_High_Speed_Mode:
            I2C_Open(i2c, I2C_MASTER_HIGH_SPEED_MODE_CLK_FREQUENCY);
            break;
    }

    I2C_DisableInt(i2c);
    I2C_EnableInt(i2c);

    return hwI2C_OK;
}

hwI2C_OpResult I2C_Instance_DeInit(hwI2C_Index index)
{
    if(index >= hwI2C_Index_MAX)
        return hwI2C_InvalidParameter;

    if(!I2C_Master_Init_Status[index])
        return hwI2C_OK;

    I2C_T *i2c = I2C_Map_Soc_Base(index);

    if(i2c == NULL)
        return hwI2C_InvalidParameter;

    I2C_DisableInt(i2c);
    I2C_STOP(i2c);
    I2C_Close(i2c);

    I2C_Disable_Clock(index);

    memset(&i2c_xfer[index], 0, sizeof(i2c_xfer[index]));
    i2c_xfer[index].state = NUC4x2_I2C_IDLE;

    return hwI2C_OK;
}

void I2C_NVIC_Init(hwI2C_Index index)
{
    switch(index)
    {
#if defined(I2C0_BASE)
        case hwI2C_Index_0:
            NVIC_ClearPendingIRQ(I2C0_IRQn);
            NVIC_EnableIRQ(I2C0_IRQn);
            break;
#endif
#if defined(I2C1_BASE)
        case hwI2C_Index_1:
            NVIC_ClearPendingIRQ(I2C1_IRQn);
            NVIC_EnableIRQ(I2C1_IRQn);
            break;
#endif
#if defined(I2C2_BASE)
        case hwI2C_Index_2:
            NVIC_ClearPendingIRQ(I2C2_IRQn);
            NVIC_EnableIRQ(I2C2_IRQn);
            break;
#endif
#if defined(I2C3_BASE)
        case hwI2C_Index_3:
            NVIC_ClearPendingIRQ(I2C3_IRQn);
            NVIC_EnableIRQ(I2C3_IRQn);
            break;
#endif
#if defined(I2C4_BASE)
        case hwI2C_Index_4:
            NVIC_ClearPendingIRQ(I2C4_IRQn);
            NVIC_EnableIRQ(I2C4_IRQn);
            break;
#endif

        default:
            break;
    }
}
