==> neon-smart-studio/W-Link_NeonRTOS_Platform/src/W-Link/Driver/I2C/Device/STM32/I2C_Master_STM32C0.c <==
#include <stdbool.h>
#include <stdint.h>
#include <string.h>
#include "soc.h"
#include "NeonRTOS.h"
#include "I2C/I2C_Master.h"
#include "I2C_Master_STM32.h"

static void I2C_EnableClock(hwI2C_Index index)
{
    switch (index)
    {
#if defined(I2C1_BASE)
        case hwI2C_Index_0:
            __HAL_RCC_I2C1_CLK_ENABLE();
            break;
#endif
#if defined(I2C2_BASE)
        case hwI2C_Index_1:
            __HAL_RCC_I2C2_CLK_ENABLE();
            break;
#endif

        default:
            break;
    }
}

static void I2C_DisableClock(hwI2C_Index index)
{
    switch (index)
    {
#if defined(I2C1_BASE)
        case hwI2C_Index_0:
            __HAL_RCC_I2C1_CLK_DISABLE();
            break;
#endif
#if defined(I2C2_BASE)
        case hwI2C_Index_1:
            __HAL_RCC_I2C2_CLK_DISABLE();
            break;
#endif

        default:
            break;
    }
}

void I2C2_IRQHandler(void)
{
    I2C_HAL_EV_IRQHandler(hwI2C_Index_1);
    I2C_HAL_ER_IRQHandler(hwI2C_Index_1);
}

hwI2C_OpResult I2C_Instance_Init(hwI2C_Index index, hwI2C_Speed_Mode speed_mode)
{
    if (index >= hwI2C_Index_MAX) {
        return hwI2C_InvalidParameter;
    }

    I2C_TypeDef *i2c_soc_base = I2C_Map_Soc_Base(index);
    if (i2c_soc_base == NULL) {
        return hwI2C_InvalidParameter;
    }

    I2C_EnableClock(index);

    
    g_i2c[index].Instance             = i2c_soc_base;
    g_i2c[index].Init.Timing          = I2C_Master_Get_Timing(index, speed_mode);
    g_i2c[index].Init.OwnAddress1     = 0;
    g_i2c[index].Init.AddressingMode  = I2C_ADDRESSINGMODE_7BIT;
    g_i2c[index].Init.DualAddressMode = I2C_DUALADDRESS_DISABLE;
    g_i2c[index].Init.OwnAddress2     = 0;
    g_i2c[index].Init.OwnAddress2Masks = I2C_OA2_NOMASK;
    g_i2c[index].Init.GeneralCallMode = I2C_GENERALCALL_DISABLE;
    g_i2c[index].Init.NoStretchMode   = I2C_NOSTRETCH_DISABLE;

    if (g_i2c[index].Init.Timing == 0) {
        return hwI2C_InvalidParameter;
    }

    if (HAL_I2C_Init(&g_i2c[index]) != HAL_OK) {
        return hwI2C_HwError;
    }

    HAL_I2CEx_ConfigAnalogFilter(&g_i2c[index], I2C_ANALOGFILTER_ENABLE);
    HAL_I2CEx_ConfigDigitalFilter(&g_i2c[index], 0);

    return hwI2C_OK;
}

hwI2C_OpResult I2C_Instance_DeInit(hwI2C_Index index)
{
    if (index >= hwI2C_Index_MAX) {
        return hwI2C_InvalidParameter;
    }

    HAL_I2C_DeInit(&g_i2c[index]);

    I2C_DisableClock(index);

    return hwI2C_OK;
}

void I2C_NVIC_Init(hwI2C_Index index)
{
    switch (index)
    {
#if defined (I2C1_BASE)
        case hwI2C_Index_0:
            HAL_NVIC_SetPriority(I2C1_IRQn, I2C_IRQ_NVIC_PRIORITY, I2C_IRQ_NVIC_SUB_PRIORITY);
            HAL_NVIC_EnableIRQ(I2C1_IRQn);
            break;
#endif
#if defined (I2C2_BASE)
        case hwI2C_Index_1:
            HAL_NVIC_SetPriority(I2C2_IRQn, I2C_IRQ_NVIC_PRIORITY, I2C_IRQ_NVIC_SUB_PRIORITY);
            HAL_NVIC_EnableIRQ(I2C2_IRQn);
            break;
#endif

        default:
            break;
    }
}
